# yew_storybook_clone

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
storybook_yew_app/: Cargo.toml  index.html  tailwind.config.js  trunk.toml
storybook_yew_app/src/: app.rs  main.rs  router.rs
storybook_yew_app/src/components/: mod.rs
storybook_yew_app/src/components/features/: mod.rs  render_story_routes.rs
storybook_yew_app/src/components/layouts/: mod.rs
storybook_yew_app/src/components/layouts/primary_layout/: layout.rs  mod.rs  side_bar.rs  tool_bar.rs
storybook_yew_app/src/components/layouts/secondary_layout/: mod.rs  story_content_container.rs  welcome_main_page.rs
storybook_yew_app/src/components/ui/: button.rs  mod.rs  title.rs
storybook_yew_app/src/hooks/: mod.rs  use_even_hook.rs  use_state_set_on_click.rs
storybook_yew_app/src/utils/: event_handlers.rs  load_seo.rs  mod.rs
storybook_yew_app/src/utils/data/: seo_content.yaml
styles/: input.css  output.css
web_yew_app/: Cargo.toml  index.html  tailwind.config.js  trunk.toml
web_yew_app/src/: main.rs
yew_app_core/: Cargo.toml
yew_app_core/src/: app.rs  component_registry.rs  lib.rs  stories.rs
yew_app_core/src/components/: example_components.rs  example_stories.rs  mod.rs
yew_app_core/src/sb/: mod.rs  stories_map.rs
